--- a/static/css/styles_form_chamado.css
+++ b/static/css/styles_form_chamado.css
@@ -1,55 +1,82 @@
-/* Estilos gerais para o formulário */
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    margin: 0;
-    padding: 0;
-}
-
-.container {
-    max-width: 800px;
-    margin: 20px auto;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    font-family: sans-serif;
+    margin: 2rem;
+    background-color: #f5f5f5;
 }
 
 h1 {
     text-align: center;
-    color: #333;
+    margin-bottom: 1rem;
+    color: #f7931a;
+}
+
+form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+    background-color: #fff;
+    border: 1px solid #e6e6e6;
+    border-radius: 5px;
+    padding: 1rem;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .form-group {
-    margin-bottom: 20px;
+    margin-bottom: 0.5rem;
+    width: 48%;
 }
 
 label {
     display: block;
+    margin-bottom: 0.2rem;
     font-weight: bold;
+    color: #666;
 }
 
 input[type="text"],
 input[type="date"],
 input[type="time"],
-select,
-textarea {
+textarea,
+select {
     width: 100%;
-    padding: 8px;
+    padding: 0.5rem;
     border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
+    border-radius: 3px;
+    font-size: 16px;
 }
 
-input[type="submit"] {
-    background-color: #007bff;
-    color: #fff;
+textarea {
+    resize: vertical;
+}
+
+button[type="submit"] {
+    width: 100%;
+    background-color: #f7931a;
+    color: white;
+    padding: 1rem;
     border: none;
-    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 18px;
+    font-weight: bold;
     cursor: pointer;
-    border-radius: 4px;
+    transition: transform 0.2s ease-in-out, background-color 0.2s ease-in-out;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-input[type="submit"]:hover {
-    background-color: #0056b3;
+button[type="submit"]:hover {
+    transform: scale(1.05);
+    background-color: #ff7900;
+}
+
+input[type="text"],
+input[type="date"],
+input[type="time"],
+textarea,
+select:focus {
+    outline: none;
+    border: 2px solid #f7931a;
+    box-shadow: 0 0 5px rgba(#f7931a, 0.5);
 }
